@@ -16,7 +16,9 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] rotator can now have a map. Check out OE3IDE's skin server pages.
 - [add] new button box meter controls for bands, modes and filters
 - [add] rotator can now have the beam width alpha adjusted
+- [add] right click a band in a band button box, and it will bandstack for that band
 - [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
+- [change] filter setup form now stores/recalls location
 - [fix] import of container locations now works when importing a database
 - [fix] fixed issue where a meter container would re-appear if console was minimised and then restored and that container had been docked at some point
 - [fix] exporting a tx profile no longer exports schema for non tx profile tables
